--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 LeverageTechnology/.vs/LeverageTechnology/v17/.suo
+LeverageTechnology/.vs/LeverageTechnology/v17/.suo
+LeverageTechnology/.vs/LeverageTechnology/v17/.suo
