--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ LeverageTechnology/.vs/LeverageTechnology/v17/.suo
 LeverageTechnology/.vs/LeverageTechnology/v17/.suo
 *.v2
 LeverageTechnology/.vs/LeverageTechnology/v17/.suo
+*.bin
