--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ LeverageTechnology/.vs/LeverageTechnology/v17/.suo
 LeverageTechnology/.vs/LeverageTechnology/v17/.suo
 *.bin
 /LeverageTechnology/.vs/LeverageTechnology/FileContentIndex/ec8fe575-bb25-4ea0-b49b-f1fdf756d3c5.vsidx
+*.vsidx
+*.bin
+*.json
+*.cache
+*.cache
+*.json
